--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^8.2.12",
     "@angular/common": "~8.1.2",
+    "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/forms": "~8.1.2",
     "@angular/platform-browser": "~8.1.2",
@@ -23,10 +25,17 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
+    "angularfire2": "^5.2.1",
+    "cordova-android": "^8.1.0",
+    "cordova-ios": "^5.0.1",
+    "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
+    "firebase": "^7.2.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "bootstrap": "~4.3.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
@@ -38,6 +47,7 @@
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/lab": "2.0.14",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
